--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
 
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, minimal-ui">
-  <title>Kerala COVID-19 Coronavirus Tracker</title>
+  <title>Karnataka COVID-19 Coronavirus Tracker</title>
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,400i,700,700i,800&display=swap" rel="stylesheet">
 
   <link
@@ -14,39 +14,38 @@
   />
   <meta
     name="description"
-    content="Live updates of the Coronavirus COVID-19 outbreak in Kerala"
+    content="Live updates of the Coronavirus COVID-19 outbreak in Karnataka"
   />
   <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:url" content="https://covid19kerala.info/" />
-  <meta name="twitter:title" content="Kerala COVID-19 Coronavirus Tracker" />
+  <meta name="twitter:url" content="https://covid19karnataka.info/" />
+  <meta name="twitter:title" content="Karnataka COVID-19 Coronavirus Tracker" />
 
   <meta
     name="twitter:description"
-    content="Live updates of the Coronavirus COVID-19 outbreak in Kerala"
+    content="Live updates of the Coronavirus COVID-19 outbreak in Karnataka"
   />
-  <meta property="og:title" content="Kerala COVID-19 Coronavirus Tracker" />
+  <meta property="og:title" content="Karnataka COVID-19 Coronavirus Tracker" />
   <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://covid19Kerala.info/" />
+  <meta property="og:url" content="https://covid19Karnataka.info/" />
   <meta
     property="og:image"
-    content="https://covid19Kerala.info/static/map.jpg"
+    content="https://covid19Karnataka.info/static/map.jpg"
   />
   <meta
     property="og:description"
-    content="Live updates of the Coronavirus COVID-19 outbreak in Kerala"
+    content="Live updates of the Coronavirus COVID-19 outbreak in Karnataka"
   />
 
 </head>
 <body class="<%= htmlWebpackPlugin.options.bodyClass %>">
 
-
-  <header class="embed-hide">
-    <div class="lang-picker">
+ <header class="embed-hide">
+    <!--<div class="lang-picker">
       <a href="#" data-lang-picker='ja'>മലയാളം</a>
       <a href="#" data-lang-picker='en' style="display:none">English</a>
-    </div>
+    </div> -->
 
-    <h1 data-ja="കോവിഡ്-19 ട്രാക്കർ - കേരളം ">COVID-19 Tracker - Kerala</h1>
+    <h1 data-ja="കോവിഡ്-19 ട്രാക്കർ - കേരളം ">COVID-19 Tracker - Karnataka</h1>
     
     <div>
       <em>
@@ -100,7 +99,7 @@
     <div><span class="four">▉</span> <span data-ja="50+ രോഗികൾ">50+ cases</span></div>
   </section>
   <div id="map-container"></div>
-  <h5 class="embed-show footnote">powered by <a href="https://covid19Kerala.info" target="_blank">Covid19Kerala.info</a></h5>
+  <h5 class="embed-show footnote">powered by <a href="https://covid19Karnataka.info" target="_blank">Covid19Karnataka.info</a></h5>
 
   <section id="trend-chart-container" class="embed-hide">
     <h4 data-ja="രോഗം പരക്കുന്നതിന്റെ ഗതി ">Outbreak Spread Trend</h4>
@@ -152,7 +151,7 @@
          and give us your <a href="https://docs.google.com/forms/d/1DdNDQWkUHYjS07agK04hG0i5VrhvasHRWmBUT1ZxLUA/edit?usp=sharing" target="_blank">feedback and comments. </a>
       </em>
       <em>
-         Check our <a href="https://team.covid19kerala.info/faq">FAQ</a> for more information.
+         Check our <a href="https://team.covid19Karnataka.info/faq">FAQ</a> for more information.
       </em>
     </div>
   </section>
@@ -168,7 +167,7 @@
           WHO COVID-19 Information Page
         </a>
       </li>
-      <li> <a href="http://dhs.kerala.gov.in/public-health-2019-n-corona-virus/"> Kerala Fights Corona </a> </li>
+      <li> <a href="http://dhs.Karnataka.gov.in/public-health-2019-n-corona-virus/"> Karnataka Fights Corona </a> </li>
       <li> <a href="https://nhm.gov.in/"> India Fights Corona </a> </li>
       <li> <a href="https://www.unicef.org/coronavirus/covid-19">Unicef for Every Child </a> </li>
       <li><a href="https://www.covid19india.org/" target="_blank">CoVID-19 India Project</a></li>
@@ -180,7 +179,7 @@
     <h4 data-ja="പ്രാഥമിക ഡാറ്റ ഉറവിടങ്ങൾ">Primary Data Sources</h4>
     <ul>
       <li><a href="https://www.mohfw.gov.in/">Ministry of Health and Family Welfare, Govt of India</a></li>
-      <li><a href="http://dhs.kerala.gov.in/">DHS – Directorate of Health Services, Govt of Kerala</a></li>
+      <li><a href="http://dhs.Karnataka.gov.in/">DHS – Directorate of Health Services, Govt of Karnataka</a></li>
     </ul>
   </section>
 
@@ -191,11 +190,11 @@
     </p>
 
     <p>
-       Maintained by Volunteers at <a href="https://team.covid19kerala.info/" target="_blank"></a>CODD-K Team. Supported by <a href="https://www.gck.ac.in/" target="_blank">Government College Kasaragod</a>.
+       Maintained by Volunteers at <a href="https://team.covid19Karnataka.info/" target="_blank"></a>CODD-K Team. Supported by <a href="https://www.gck.ac.in/" target="_blank">Government College Kasaragod</a>.
     </p>
 
     <p>
-      This project is <a href="https://github.com/c19k" target="_blank">maintained</a> and <a href="https://github.com/c19k/website" target="_blank">hosted</a> in <a href="https://github.com/" target="_blank">GitHub</a>. The dataset is managed with <a href="hhttps://docs.google.com/spreadsheets/d/e/2PACX-1vQU9eLCMT0XwWnoxV_LkyCkxMcPYO7z7ULdODoUFgcdzp48pgGpGrVZFXvraXYvUioVRsQgQDU_pQyI/pubhtml" target="_blank">Google Sheets</a>. <a href="https://github.com/geohacker/kerala" target="_blank">Kerala GeoJSON</a> is generously provided by <a href="https://github.com/geohacker" target="_blank">Sajjad Anwar</a>. Map is sponsored by the <a href="https://www.mapbox.com/community/" target="_blank">Mapbox Community team</a>.
+      This project is <a href="https://github.com/c19k" target="_blank">maintained</a> and <a href="https://github.com/c19k/website" target="_blank">hosted</a> in <a href="https://github.com/" target="_blank">GitHub</a>. The dataset is managed with <a href="hhttps://docs.google.com/spreadsheets/d/e/2PACX-1vQU9eLCMT0XwWnoxV_LkyCkxMcPYO7z7ULdODoUFgcdzp48pgGpGrVZFXvraXYvUioVRsQgQDU_pQyI/pubhtml" target="_blank">Google Sheets</a>. <a href="https://github.com/geohacker/Karnataka" target="_blank">Karnataka GeoJSON</a> is generously provided by <a href="https://github.com/geohacker" target="_blank">Sajjad Anwar</a>. Map is sponsored by the <a href="https://www.mapbox.com/community/" target="_blank">Mapbox Community team</a>.
     </p>
 
     <p>
