Changing project links - Adding karnataka ministry links - Changing link of feedback and suggestions.

--- a/src/index.html
+++ b/src/index.html
@@ -167,7 +167,7 @@
           WHO COVID-19 Information Page
         </a>
       </li>
-      <li> <a href="http://dhs.Karnataka.gov.in/public-health-2019-n-corona-virus/"> Karnataka Fights Corona </a> </li>
+      <!-- <li> <a href="http://dhs.Karnataka.gov.in/public-health-2019-n-corona-virus/"> Karnataka Fights Corona </a> </li> -->
       <li> <a href="https://nhm.gov.in/"> India Fights Corona </a> </li>
       <li> <a href="https://www.unicef.org/coronavirus/covid-19">Unicef for Every Child </a> </li>
       <li><a href="https://www.covid19india.org/" target="_blank">CoVID-19 India Project</a></li>
@@ -179,22 +179,25 @@
     <h4 data-ja="പ്രാഥമിക ഡാറ്റ ഉറവിടങ്ങൾ">Primary Data Sources</h4>
     <ul>
       <li><a href="https://www.mohfw.gov.in/">Ministry of Health and Family Welfare, Govt of India</a></li>
-      <li><a href="http://dhs.Karnataka.gov.in/">DHS – Directorate of Health Services, Govt of Karnataka</a></li>
+      <li><a href="https://karunadu.karnataka.gov.in/hfw/Pages/home.aspx/">Health and Family Welfare Services, Govt of Karnataka</a></li>
     </ul>
   </section>
 
   <footer class="embed-hide">
 
     <p>
-      Contribute to <a href="https://github.com/c19k/website" target="_blank">this project on GitHub</a>. Also, give us your <a href="https://docs.google.com/forms/d/1DdNDQWkUHYjS07agK04hG0i5VrhvasHRWmBUT1ZxLUA/edit?usp=sharing" target="_blank">feedback and comments.</a>
+      Contribute to <a href="https://github.com/c19k/website" target="_blank">this project on GitHub</a>. Also, give us your <a href="https://docs.google.com/forms/d/e/1FAIpQLSc6c79p0Ot_yuMePlwIKFo4G3zA_WLqFVJYpvaMrXrwHaQ9bw/viewform" target="_blank">feedback and comments.</a>
     </p>
 
     <p>
-       Maintained by Volunteers at <a href="https://team.covid19Karnataka.info/" target="_blank"></a>CODD-K Team. Supported by <a href="https://www.gck.ac.in/" target="_blank">Government College Kasaragod</a>.
+       Maintained by Volunteers <a href="https://team.covid19Karnataka.info/" target="_blank"></a>.
+       <ol>
+         <li>Tejas DP</li>
+       </ol>
     </p>
 
     <p>
-      This project is <a href="https://github.com/c19k" target="_blank">maintained</a> and <a href="https://github.com/c19k/website" target="_blank">hosted</a> in <a href="https://github.com/" target="_blank">GitHub</a>. The dataset is managed with <a href="hhttps://docs.google.com/spreadsheets/d/e/2PACX-1vQU9eLCMT0XwWnoxV_LkyCkxMcPYO7z7ULdODoUFgcdzp48pgGpGrVZFXvraXYvUioVRsQgQDU_pQyI/pubhtml" target="_blank">Google Sheets</a>. <a href="https://github.com/geohacker/Karnataka" target="_blank">Karnataka GeoJSON</a> is generously provided by <a href="https://github.com/geohacker" target="_blank">Sajjad Anwar</a>. Map is sponsored by the <a href="https://www.mapbox.com/community/" target="_blank">Mapbox Community team</a>.
+      This project is <a href="https://github.com/c19k" target="_blank">maintained</a> and <a href="https://github.com/c19k/website" target="_blank">hosted</a> in <a href="https://github.com/" target="_blank">GitHub</a>. The dataset is managed with <a href="hhttps://docs.google.com/spreadsheets/d/e/2PACX-1vQU9eLCMT0XwWnoxV_LkyCkxMcPYO7z7ULdODoUFgcdzp48pgGpGrVZFXvraXYvUioVRsQgQDU_pQyI/pubhtml" target="_blank">Google Sheets</a>. <a href="https://github.com/geohacker/Karnataka" target="_blank">Karnataka GeoJSON</a> is generously provided by <a href="#" target="_blank">Tejas DP</a>. Map is sponsored by the <a href="https://www.mapbox.com/community/" target="_blank">Mapbox Community team</a>.
     </p>
 
     <p>
@@ -210,7 +213,7 @@
   <script src="https://api.mapbox.com/mapbox-gl-js/v0.53.1/mapbox-gl.js"></script>
   <link href="https://api.mapbox.com/mapbox-gl-js/v0.53.1/mapbox-gl.css" rel="stylesheet" />
 
-  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <!-- Global site tag (gtag.js) - Google Analytics
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-162158880-1"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
@@ -219,7 +222,7 @@
 
   gtag('config', 'UA-162158880-1');
 </script>
-
+-->
 
 </body>
 </html>
