- Removing malyalam traslations - Removing Google analyrics tracking

--- a/src/index.html
+++ b/src/index.html
@@ -45,11 +45,11 @@
       <a href="#" data-lang-picker='en' style="display:none">English</a>
     </div> -->
 
-    <h1 data-ja="കോവിഡ്-19 ട്രാക്കർ - കേരളം ">COVID-19 Tracker - Karnataka</h1>
+    <h1>COVID-19 Tracker - Karnataka</h1>
     
     <div>
       <em>
-        <span data-ja="അവസാന അപ്ഡേറ്റ് :">Last Updated:</span> <strong id="last-updated">-</strong>
+        <span>Last Updated:</span> <strong id="last-updated">-</strong>
       </em>
     </div>
   </header>
@@ -58,81 +58,81 @@
     <div id="kpi-active" data-tippy-content="Confirmed cases minus recovered minus deceased" data-tippy-placement="bottom">
       <div class="diff">&nbsp;</div>
       <div class="value"><div class="lds-dual-ring"></div></div>
-      <div class="label" data-ja="സജീവം">Active &#9432;</div>
+      <div class="label">Active &#9432;</div>
     </div>
     <div id="kpi-critical">
       <div class="diff">&nbsp;</div>
       <div class="value"><div class="lds-dual-ring"></div></div>
-      <div class="label" data-ja="ഗുരുതരം">Critical</div>
+      <div class="label">Critical</div>
     </div>
     <div id="kpi-deceased">
       <div class="diff">&nbsp;</div>
       <div class="value"><div class="lds-dual-ring"></div></div>
-      <div class="label" data-ja="ജീവഹാനി">Deaths</div>
+      <div class="label">Deaths</div>
     </div>
     <div id="kpi-tested">
       <div class="diff">&nbsp;</div>
       <div class="value"><div class="lds-dual-ring"></div></div>
-      <div class="label" data-ja="പരിശോധന">Tested</div>
+      <div class="label">Tested</div>
     </div>
     <div id="kpi-confirmed">
       <div class="diff">&nbsp;</div>
       <div class="value"><div class="lds-dual-ring"></div></div>
-      <div class="label" data-ja="സ്ഥിരീകരണം">Confirmed</div>
+      <div class="label">Confirmed</div>
     </div>
     <div id="kpi-recovered">
       <div class="diff">&nbsp;</div>
       <div class="value"><div class="lds-dual-ring"></div></div>
-      <div class="label" data-ja="സുഖപ്പെട്ടവർ">Recovered</div>
+      <div class="label">Recovered</div>
     </div>
   </section>
 
 
   <a name="map"></a>
   <div class="center-offset">
-    <h4 data-ja="ഭൂപടം"><span class="embed-show">COVID-19 </span>Outbreak Map</h4>
+    <h4><span class="embed-show">COVID-19 </span>Outbreak Map</h4>
   </div>
   <section id="map-legend">
-    <div><span class="one">▉</span> <span data-ja="1-10 രോഗികൾ">1-10 cases</span></div>
-    <div><span class="two">▉</span> <span data-ja="11-25 രോഗികൾ">11-25 cases</span></div>
-    <div><span class="three">▉</span> <span data-ja="26-50 രോഗികൾ">26-50 cases</span></div>
-    <div><span class="four">▉</span> <span data-ja="50+ രോഗികൾ">50+ cases</span></div>
+    <div><span class="one"> ▉ 1-10 cases</span></div>
+    <div><span class="two"> ▉ 11-25 cases</span></div>
+    <div><span class="three"> ▉ 26-50 cases</span></div>
+    <div><span class="four"> ▉ 50+ cases</span></div>
   </section>
   <div id="map-container"></div>
   <h5 class="embed-show footnote">powered by <a href="https://covid19Karnataka.info" target="_blank">Covid19Karnataka.info</a></h5>
 
   <section id="trend-chart-container" class="embed-hide">
-    <h4 data-ja="രോഗം പരക്കുന്നതിന്റെ ഗതി ">Outbreak Spread Trend</h4>
+    <h4>Outbreak Spread Trend</h4>
     <div id="trend-chart">
         <div class="text-center"><div class="lds-dual-ring"></div></div>
     </div>
   </section>
 
   <section id="daily-increase-container" class="embed-hide">
-    <h4 data-ja="ഓരോ ദിവസത്തെയും പുതിയ രോഗികൾ">New Cases By Day</h4>
+    <h4>New Cases By Day</h4>
     <div id="daily-increase-chart">
         <div class="text-center"><div class="lds-dual-ring"></div></div>
     </div>
   </section>
 
   <section id="prefecture-trajectory-container" class="embed-hide">
-    <h4 data-ja="ജില്ല തിരിച്ചുള്ള രോഗവ്യാപന ട്രാജക്ടറി (10 രോഗികളിലധികം )">Confirmed Case Trajectories by Districts (> 10 Cases)</h4>
+    <h4>Confirmed Case Trajectories by Districts (> 10 Cases)</h4>
     <div id="prefecture-trajectory">
         <div class="text-center"><div class="lds-dual-ring"></div></div>
     </div>
   </section>
 
   <section class="embed-hide">
-    <h4 data-ja="ജില്ല തിരിച്ചുള്ള വിവരം ">District Data</h4>
+    <h4>District Data</h4>
     <table id="prefectures-table">
       <thead>
         <tr>
-          <th data-ja="ജില്ല"class="prefecture">District</th>
+          <th class="prefecture">District</th>
 		<th class="trend"><div id="sparkline-chart"></div>
           </th>
-          <th data-ja="കേസ്" class="count">Confirmed</th>
-          <th data-ja="സുഖപ്പെട്ടവർ" class="count">Recovered</th>
-          <th data-ja="ജീവഹാനി"class="count">Deaths</th>
+          <th class="count">Confirmed</th>
+          <th class="count">Recovered</th>
+          <th class="count">Deaths</th>
         </tr>
       </thead>
       <tbody>
@@ -158,7 +158,7 @@
 
   <section id="helpful-links" class="embed-hide">
     <a name="links"></a>
-    <h4 data-ja="സഹായകരമായ ലിങ്കുകൾ">Helpful Links</h4>
+    <h4>Helpful Links</h4>
     <ul>
 
 
@@ -176,7 +176,7 @@
     </ul>
 
     <br/>
-    <h4 data-ja="പ്രാഥമിക ഡാറ്റ ഉറവിടങ്ങൾ">Primary Data Sources</h4>
+    <h4>Primary Data Sources</h4>
     <ul>
       <li><a href="https://www.mohfw.gov.in/">Ministry of Health and Family Welfare, Govt of India</a></li>
       <li><a href="https://karunadu.karnataka.gov.in/hfw/Pages/home.aspx/">Health and Family Welfare Services, Govt of Karnataka</a></li>
